--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 								collaborative prototypes that enhance user experiences.</p>
 					</div>
 
-					<p class="pb-2" style="font-size: 17px;"><h3>Additionally</h3> I am proficient in Photoshop, Illustrator, and other Adobe programs, which allows me to create visually appealing designs that enhance user experience and engagement. My expertise in these tools complements my development skills, enabling me to bring concepts to life with a polished, professional finish.</p>
+					<p class="pb-2" style="font-size: 17px;"><h3>Additionally</h3> I am proficient in Photoshop, Illustrator, and other Adobe programs, which allows me to create visually appealing designs that enhance user experience and engagement. My expertise in these tools complements my development skills, enabling me to bring concepts to life with a polished, professional finish. Additionally, my knowledge in responsive email design—including MSO compatibility, ADA compliance, and dark mode optimization—ensures that designs are accessible, adaptable, and visually consistent across platforms. This blend of design and technical skills allows me to deliver high-quality, interactive, and inclusive digital experiences.</p>
 
 				</div>
 				<!-- End Row -->
